add recipe options and click image

--- a/index.html
+++ b/index.html
@@ -33,64 +33,165 @@
 			<li class="nav-item">
         		<h2>Meat</h2>
 				<section class="basic-grid">
-					<div class="card" onclick="addSelection('Bacon')">Bacon</div>
-					<div class="card" onclick="addSelection('Cheese')">Cheese</div>
-					<div class="card" onclick="addSelection('Tomato Sauce')">Tomato Sauce</div>
-					<div class="card" onclick="addSelection('Fish')">Fish</div>
-					<div class="card" onclick="addSelection('Veal')">Veal</div>
-					<div class="card" onclick="addSelection('Goat')">Goat</div>
-					<div class="card" onclick="addSelection('Pork')">Pork</div>
-					<div class="card" onclick="addSelection('Mutton')">Mutton</div>
-					<div class="card" onclick="addSelection('Kangaroo')">Kangaroo</div>
-				</section>
+					<div class="card" onclick="addSelection('beef mince')">Beef Mince</div>
+					<div class="card" onclick="addSelection('pork chops')">Pork Chops</div>
+					<div class="card" onclick="addSelection('sausage')">Sausage</div>
+					<div class="card" onclick="addSelection('ham')">Ham</div>
+					<div class="card" onclick="addSelection('pork')">Pork</div>
+					<div class="card" onclick="addSelection('cod')">Cod</div>
+					<div class="card" onclick="addSelection('chicken thighs')">Chicken Thighs</div>
+					<div class="card" onclick="addSelection('chicken')">Chicken</div>
+					<div class="card" onclick="addSelection('chicken drumsticks')">Chicken Drumsticks</div>
+					<div class="card" onclick="addSelection('chicken breast')">Chicken Breast</div>
+					<div class="card" onclick="addSelection('chicken fillets')">Chicken Fillets</div>
+					<div class="card" onclick="addSelection('bacon')">Bacon</div>
+					<div class="card" onclick="addSelection('lobster tail')">Lobster Tail</div>
+					<div class="card" onclick="addSelection('shrimp')">Shrimp</div>
+					<div class="card" onclick="addSelection('beef')">Beef</div>
+					<div class="card" onclick="addSelection('crab clusters')">Crab Clusters</div>
+					<div class="card" onclick="addSelection('duck')">Duck</div>
+					<div class="card" onclick="addSelection('deli ham')">Deli Ham</div>
+					<div class="card" onclick="addSelection('ground beef hot dogs')">Ground Beef Hot Dogs</div>
+					<div class="card" onclick="addSelection('chicken wings')">Chicken Wings</div>
+					<div class="card" onclick="addSelection('turkey')">Turkey</div>
+					<div class="card" onclick="addSelection('vegan ground beef')">Vegan Ground Beef</div>
+					<div class="card" onclick="addSelection('ribs')">Ribs</div>
+					<div class="card" onclick="addSelection('lamb')">Lamb</div>
+				  </section>
 			</li>
 
 			<li class="nav-item">
         		<h2>Dairy</h2>
 				<section class="basic-grid">
-					<div class="card" onclick="addSelection('Milk')">Milk</div>
-					<div class="card" onclick="addSelection('Cheese')">Cheese</div>
-					<div class="card" onclick="addSelection('Cream')">Cream</div>
-					<div class="card" onclick="addSelection('Yoghurt')">Yoghurt</div>
-					<div class="card" onclick="addSelection('Sour Cream')">Sour Cream</div>
-					<div class="card" onclick="addSelection('Butter')">Butter</div>
-				</section>
+					<div class="card" onclick="addSelection('milk')">Milk</div>
+					<div class="card" onclick="addSelection('yoghurt')">Yoghurt</div>
+					<div class="card" onclick="addSelection('cheese')">Cheese</div>
+					<div class="card" onclick="addSelection('margarine')">Margarine</div>
+					<div class="card" onclick="addSelection('butter')">Butter</div>
+					<div class="card" onclick="addSelection('buttermilk')">Buttermilk</div>
+					<div class="card" onclick="addSelection('sour cream')">Sour Cream</div>
+					<div class="card" onclick="addSelection('tomato soup')">Tomato Soup</div>
+					<div class="card" onclick="addSelection('ricotta')">Ricotta</div>
+					<div class="card" onclick="addSelection('cream')">Cream</div>
+				  </section>
 			</li>
 
 			<li class="nav-item">
 				<h2>Vegetables</h2>
 				<section class="basic-grid">
-					<div class="card" onclick="addSelection('Onion')">Onion</div>
-					<div class="card" onclick="addSelection('Capsicum')">Capsicum</div>
-					<div class="card" onclick="addSelection('Potato')">Potato</div>
-					<div class="card" onclick="addSelection('Tomato')">Tomato</div>
-					<div class="card" onclick="addSelection('Carrot')">Carrot</div>
-					<div class="card" onclick="addSelection('Celery')">Celery</div>
-					<div class="card" onclick="addSelection('Broccoli')">Broccoli</div>
-					<div class="card" onclick="addSelection('Pumpkin')">Pumpkin</div>
-					<div class="card" onclick="addSelection('Lettuce')">Lettuce</div>
-					<div class="card" onclick="addSelection('Cabbage')">Cabbage</div>
-					<div class="card" onclick="addSelection('Corn')">Corn</div>
-					<div class="card" onclick="addSelection('Bean Sprouts')">Bean Sprouts</div>
-					<div class="card" onclick="addSelection('Bok Choy')">Bok Choy</div>
+					<section class="basic-grid">
+						<div class="card" onclick="addSelection('onion')">Onion</div>
+						<div class="card" onclick="addSelection('carrot')">Carrot</div>
+						<div class="card" onclick="addSelection('mushrooms')">Mushrooms</div>
+						<div class="card" onclick="addSelection('tomatoes')">Tomatoes</div>
+						<div class="card" onclick="addSelection('green pepper')">Green Pepper</div>
+						<div class="card" onclick="addSelection('broccoli')">Broccoli</div>
+						<div class="card" onclick="addSelection('sweetcorn')">Sweetcorn</div>
+						<div class="card" onclick="addSelection('sage')">Sage</div>
+						<div class="card" onclick="addSelection('tomato')">Tomato</div>
+						<div class="card" onclick="addSelection('green apple')">Green Apple</div>
+						<div class="card" onclick="addSelection('oil')">Oil</div>
+						<div class="card" onclick="addSelection('bay leaf')">Bay Leaf</div>
+						<div class="card" onclick="addSelection('celery')">Celery</div>
+						<div class="card" onclick="addSelection('mushroom')">Mushroom</div>
+						<div class="card" onclick="addSelection('peas')">Peas</div>
+						<div class="card" onclick="addSelection('scallion')">Scallion</div>
+						<div class="card" onclick="addSelection('orange')">Orange</div>
+						<div class="card" onclick="addSelection('parsnip')">Parsnip</div>
+						<div class="card" onclick="addSelection('spinach')">Spinach</div>
+						<div class="card" onclick="addSelection('baby corn')">Baby Corn</div>
+						<div class="card" onclick="addSelection('cauliflower')">Cauliflower</div>
+						<div class="card" onclick="addSelection('shallots')">Shallots</div>
+						<div class="card" onclick="addSelection('cabbage')">Cabbage</div>
+						<div class="card" onclick="addSelection('courgette')">Courgette</div>
+						<div class="card" onclick="addSelection('red pepper')">Red Pepper</div>
+						<div class="card" onclick="addSelection('arugula')">Arugula</div>
+						<div class="card" onclick="addSelection('lentils')">Lentils</div>
+						<div class="card" onclick="addSelection('stock cube')">Stock Cube</div>
+						<div class="card" onclick="addSelection('ketchup')">Ketchup</div>
+						<div class="card" onclick="addSelection('green beans')">Green Beans</div>
+						<div class="card" onclick="addSelection('pumpkin')">Pumpkin</div>
+						<div class="card" onclick="addSelection('chickpeas')">Chickpeas</div>
+						<div class="card" onclick="addSelection('sweet potato')">Sweet Potato</div>
+						<div class="card" onclick="addSelection('coconut milk')">Coconut Milk</div>
+					  </section>
 				</section>
 			</li>
 
 			<li class="nav-item">
 				<h2>Staples</h2>
 				<section class="basic-grid">
-					<div class="card" onclick="addSelection('Flour')">Flour</div>
-					<div class="card" onclick="addSelection('Corn Flour')">Corn Flour</div>
-					<div class="card" onclick="addSelection('Sugar')">Sugar</div>
-					<div class="card" onclick="addSelection('Egg')">Egg</div>
-					<div class="card" onclick="addSelection('Rice')">Rice</div>
-					<div class="card" onclick="addSelection('Bread')">Bread</div>
-					<div class="card" onclick="addSelection('Vegetable Oil')">Vegetable Oil</div>
-					<div class="card" onclick="addSelection('Olive Oil')">Olive Oil</div>
-					<div class="card" onclick="addSelection('Basil')">Basil</div>
-					<div class="card" onclick="addSelection('Oregano')">Oregano</div>
-					<div class="card" onclick="addSelection('Pasta')">Pasta</div>
-				</section>
+					<div class="card" onclick="addSelection('water')">Water</div>
+					<div class="card" onclick="addSelection('olive oil')">Olive Oil</div>
+					<div class="card" onclick="addSelection('salt')">Salt</div>
+					<div class="card" onclick="addSelection('vinegar')">Vinegar</div>
+					<div class="card" onclick="addSelection('rolled wheat')">Rolled Wheat</div>
+					<div class="card" onclick="addSelection('dried fruit')">Dried Fruit</div>
+					<div class="card" onclick="addSelection('sesame seeds')">Sesame Seeds</div>
+					<div class="card" onclick="addSelection('sunflower seeds')">Sunflower Seeds</div>
+					<div class="card" onclick="addSelection('mixed nuts')">Mixed Nuts</div>
+					<div class="card" onclick="addSelection('beef stock')">Beef Stock</div>
+					<div class="card" onclick="addSelection('chilli powder')">Chilli Powder</div>
+					<div class="card" onclick="addSelection('tomato sauce')">Tomato Sauce</div>
+					<div class="card" onclick="addSelection('garlic')">Garlic</div>
+					<div class="card" onclick="addSelection('kidney beans')">Kidney Beans</div>
+					<div class="card" onclick="addSelection('ginger')">Ginger</div>
+					<div class="card" onclick="addSelection('vegetable stock')">Vegetable Stock</div>
+					<div class="card" onclick="addSelection('curry powder')">Curry Powder</div>
+					<div class="card" onclick="addSelection('spaghetti')">Spaghetti</div>
+					<div class="card" onclick="addSelection('vegetable oil')">Vegetable Oil</div>
+					<div class="card" onclick="addSelection('gherkin')">Gherkin</div>
+					<div class="card" onclick="addSelection('breadcrumbs')">Breadcrumbs</div>
+					<div class="card" onclick="addSelection('cumin')">Cumin</div>
+					<div class="card" onclick="addSelection('lime juice')">Lime Juice</div>
+					<div class="card" onclick="addSelection('paprika')">Paprika</div>
+					<div class="card" onclick="addSelection('rosemary')">Rosemary</div>
+					<div class="card" onclick="addSelection('thyme')">Thyme</div>
+					<div class="card" onclick="addSelection('honey')">Honey</div>
+					<div class="card" onclick="addSelection('mustard')">Mustard</div>
+					<div class="card" onclick="addSelection('brown sugar')">Brown Sugar</div>
+					<div class="card" onclick="addSelection('pasta')">Pasta</div>
+					<div class="card" onclick="addSelection('worcestershire sauce')">Worcestershire Sauce</div>
+					<div class="card" onclick="addSelection('teriyaki sauce')">Teriyaki Sauce</div>
+					<div class="card" onclick="addSelection('tomato ketchup')">Tomato Ketchup</div>
+					<div class="card" onclick="addSelection('parmesan')">Parmesan</div>
+					<div class="card" onclick="addSelection('cayenne pepper')">Cayenne Pepper</div>
+					<div class="card" onclick="addSelection('curry paste')">Curry Paste</div>
+					<div class="card" onclick="addSelection('passata')">Passata</div>
+					<div class="card" onclick="addSelection('Thai red curry paste')">Thai Red Curry Paste</div>
+					<div class="card" onclick="addSelection('cumin powder')">Cumin Powder</div>
+					<div class="card" onclick="addSelection('red lentils')">Red Lentils</div>
+					<div class="card" onclick="addSelection('mixed herbs')">Mixed Herbs</div>
+					<div class="card" onclick="addSelection('brown rice')">Brown Rice</div>
+					<div class="card" onclick="addSelection('sunflower oil')">Sunflower Oil</div>
+					<div class="card" onclick="addSelection('kiwifruit')">Kiwifruit</div>
+					<div class="card" onclick="addSelection('grapes')">Grapes</div>
+					<div class="card" onclick="addSelection('ice cube')">Ice Cube</div>
+					<div class="card" onclick="addSelection('chocolate chips')">Chocolate Chips</div>
+					<div class="card" onclick="addSelection('sugar')">Sugar</div>
+					<div class="card" onclick="addSelection('flour')">Flour</div>
+					<div class="card" onclick="addSelection('vanilla extract')">Vanilla Extract</div>
+					<div class="card" onclick="addSelection('masala')">Masala</div>
+					<div class="card" onclick="addSelection('pul biber')">Pul Biber</div>
+					<div class="card" onclick="addSelection('caesar dressing')">Caesar Dressing</div>
+					<div class="card" onclick="addSelection('pepperoni')">Pepperoni</div>
+					<div class="card" onclick="addSelection('cashew pieces')">Cashew Pieces</div>
+					<div class="card" onclick="addSelection('macaroni')">Macaroni</div>
+					<div class="card" onclick="addSelection('tartar')">Tartar</div>
+					<div class="card" onclick="addSelection('vegan pie shell')">Vegan Pie Shell</div>
+					<div class="card" onclick="addSelection('silken tofu')">Silken Tofu</div>
+					<div class="card" onclick="addSelection('peanut butter')">Peanut Butter</div>
+					<div class="card" onclick="addSelection('Haitian epis')">Haitian Epis</div>
+					<div class="card" onclick="addSelection('berries')">Berries</div>
+					<div class="card" onclick="addSelection('cornstarch')">Cornstarch</div>
+					<div class="card" onclick="addSelection('peanut oil')">Peanut Oil</div>
+					<div class="card" onclick="addSelection('kelp powder')">Kelp Powder</div>
+					<div class="card" onclick="addSelection('cloves')">Cloves</div>
+					<div class="card" onclick="addSelection('puff pastry sheets')">Puff Pastry Sheets</div>
+					<div class="card" onclick="addSelection('rice')">Rice</div>
+					<div class="card" onclick="addSelection('salsa')">Salsa</div>
+					<div class="card" onclick="addSelection('chives')">Chives</div>
+				  </section>
 			</li>
 
 		</ul>
